--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Akfa main app</title>
+    <title>Akfa Med</title>
     <script
       src="https://kit.fontawesome.com/d04db58d7f.js"
       crossorigin="anonymous"
